--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-
 
     <application
         android:allowBackup="true"
@@ -15,21 +15,25 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TreasureFinder"
         tools:targetApi="31">
+        <activity
+            android:name=".SaleDetail"
+            android:exported="false"
+            android:label="@string/title_activity_sale_detail"
+            android:theme="@style/Theme.TreasureFinder" />
 
-
--->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyBtiwDrSy5gH44LcbTRs5clAWnn_P_42Pg" />
+
         <activity
             android:name=".SalesActivity"
             android:exported="true">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-    </activity>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".SignUp"
             android:exported="false" />
@@ -38,8 +42,7 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="false">
-        </activity>
+            android:exported="false"></activity>
     </application>
 
 </manifest>
