--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,13 @@
             android:name=".SignUp"
             android:exported="false" />
         <activity
+            android:name=".UserSales"
+            android:exported="false" />
+        <activity
             android:name=".Login"
+            android:exported="false" />
+        <activity
+            android:name=".ItemsActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
