--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,12 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".UserItems"
+            android:exported="false" />
+        <activity
+            android:name=".AddNewItem"
+            android:exported="false" />
+        <activity
             android:name=".AddNewSale"
             android:exported="false" />
 
@@ -40,8 +46,6 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyBtiwDrSy5gH44LcbTRs5clAWnn_P_42Pg" />
-
-
 
         <activity
             android:name=".SalesActivity"
